# io_uring-rust-sgx-example

./: .gitignore  README.md  host_run.sh  sgx_run.sh
app/: Cargo.toml
app/src/: main.rs
app/src/io_uring_ocall/: mod.rs
client/: Cargo.toml
client/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
enclave/src/: lib.rs
io-uring/: Cargo.toml
io-uring/examples/: tcp_echo.rs
io-uring/src/: lib.rs  opcode.rs  register.rs  submit.rs  util.rs
io-uring/src/concurrent/: mod.rs  squeue.rs
io-uring/src/sys/: mod.rs
slab/: Cargo.toml
untrusted_allocator/: Cargo.toml
untrusted_allocator/src/: lib.rs
