[package]
name = "io-uring"
version = "0.5.0-alpha"
authors = ["quininer <quininer@live.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/tokio-rs/io-uring"
homepage = "https://github.com/tokio-rs/io-uring"
documentation = "https://docs.rs/io-uring"
description = "The `io_uring` library for Rust."
categories = [ "asynchronous", "network-programming", "filesystem" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
exclude = [ "loom-ringbuf" ]

[features]
default = [ "libc" ]
concurrent = [ "parking_lot" ]
unstable = []
overwrite = [ "bindgen" ]
sgx-feature = [ "sgx_types", "sgx_tstd", "sgx_trts" ]

[dependencies]
libc = { version = "0.2", optional = true }
bitflags = "1"
parking_lot = { version = "0.11", optional = true }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], optional = true }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../sgx_alloc" }
sgx_build_helper = { path = "../../../sgx_build_helper" }
sgx_cov = { path = "../../../sgx_cov" }
sgx_crypto_helper = { path = "../../../sgx_crypto_helper" }
sgx_libc = { path = "../../../sgx_libc" }
sgx_rand = { path = "../../../sgx_rand" }
sgx_rand_derive = { path = "../../../sgx_rand_derive" }
sgx_serialize = { path = "../../../sgx_serialize" }
sgx_serialize_derive = { path = "../../../sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../sgx_tdh" }
sgx_tkey_exchange = { path = "../../../sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../sgx_tprotected_fs" }
sgx_trts = { path = "../../../sgx_trts" }
sgx_tse = { path = "../../../sgx_tse" }
sgx_tseal = { path = "../../../sgx_tseal" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_tunittest = { path = "../../../sgx_tunittest" }
sgx_types = { path = "../../../sgx_types" }
sgx_ucrypto = { path = "../../../sgx_ucrypto" }
sgx_unwind = { path = "../../../sgx_unwind" }
sgx_urts = { path = "../../../sgx_urts" }

[build-dependencies]
bindgen = { version = "0.55", optional = true }

[dev-dependencies]
tempfile = "3"
anyhow = "1"
nix = "0.18"
lazy_static = "1"
socket2 = "0.3"
criterion = "0.3"
slab = "0.4"

[package.metadata.docs.rs]
features = [ "concurrent", "unstable" ]

[[bench]]
name = "nop"
harness = false

[[bench]]
name = "iovec"
harness = false
